resources/dsaas-stg/dsaas-preview/che-devfile-registry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: devfile-registry
  name: che-devfile-registry
spec:
  host: che-devfile-registry.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: devfile-registry
    weight: 100
  wildcardPolicy: None
